# agents-relay

./: .gitignore  CHANGELOG.md  Cargo.toml  install.sh
src/: client.rs  config.rs  db.rs  detect.rs  ingest.rs  ingest_antigravity.rs  main.rs  mcp.rs  server.rs  session_hook.rs  workspace.rs
tests/: layer1_jsol_test.sh  layer2_ingest_test.sh  layer3_search_test.sh  memory_recall_interactive_test.sh  memory_recall_test.sh
